<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            android:layout_margin="10dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="@dimen/textSize22"
                    android:textColor="@color/textColorDark"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/book_title"/>

                <TextView
                    android:id="@+id/tvSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    android:gravity="center"
                    android:textSize="@dimen/textSize14"
                    android:textColor="@color/textColorDark"
                    android:text="@string/book_subtitle"/>

                <ImageView
                    android:id="@+id/ivCover"
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/book_cover"
                    android:background="#eeeeee"
                    app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"/>

                <TextView
                    android:id="@+id/tvAuthors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    app:layout_constraintTop_toTopOf="@+id/ivCover"
                    app:layout_constraintStart_toEndOf="@+id/ivCover"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize14"
                    android:textColor="#00aa00"
                    android:textStyle="bold"
                    android:minLines="1"
                    android:ellipsize="end"
                    android:text="@string/by_author"/>

                <ImageView
                    android:id="@+id/ivStar"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvAuthors"
                    app:layout_constraintStart_toEndOf="@+id/ivCover"
                    android:contentDescription="@string/star"
                    app:layout_constraintTop_toTopOf="@+id/tvRating"
                    android:layout_alignBottom="@id/tvRating"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_star_filled_24dp"/>

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/ivStar"
                    app:layout_constraintTop_toBottomOf="@+id/tvAuthors"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/textSize14"
                    android:textColor="#fda101"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/_0_10_0"/>

                <TextView
                    android:id="@+id/tvCategories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/ivCover"
                    app:layout_constraintTop_toBottomOf="@+id/ivStar"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize14"
                    android:textColor="#3b3b3b"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:text="Category 1, Category 2, ..."/>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvCategories"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/ivCover"
                    android:textSize="@dimen/textSize14"
                    android:textColor="#6e6e6e"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:text="MMM dd, yyyy"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/card1"
            android:gravity="end">

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="Buy"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/rounded_rectangle_selector"
                android:visibility="visible"/>

            <Button
                android:id="@+id/btnRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#000000"
                android:text="Read Online"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/rounded_rectangle_selector"
                android:visibility="visible"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/llActions"
            android:textSize="@dimen/textSize16"
            android:textColor="#3b3b3b"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="About the Book:"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle"
            android:textSize="@dimen/textSize14"
            android:textColor="#3b3b3b"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:text="A long description goes here..."/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>